--- a/WebApiPro.Backend/WebApiPro.Application/WebApiPro.Application.csproj
+++ b/WebApiPro.Backend/WebApiPro.Application/WebApiPro.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="FluentValidation" Version="10.3.3" />
+    <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
   </ItemGroup>
 
