--- a/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
+++ b/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
@@ -1,7 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WebApiPro.Application\WebApiPro.Application.csproj" />
+    <ProjectReference Include="..\WebApiPro.Persistence\WebApiPro.Persistence.csproj" />
+  </ItemGroup>
 
 </Project>
