--- a/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
+++ b/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
