--- a/WebApiPro.Backend/WebApiPro.Application/WebApiPro.Application.csproj
+++ b/WebApiPro.Backend/WebApiPro.Application/WebApiPro.Application.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
