--- a/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
+++ b/WebApiPro.Backend/WebApiPro.WebApi/WebApiPro.WebApi.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
